force-app/main/default/objects/System_Log__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>These field has been created to hold 255 signs of additional information that might be useful in problem solving of this error.</description>
    <inlineHelpText>Additional helpful information like name of class/flow ect.</inlineHelpText>
    <label>Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>