force-app/main/default/objects/System_Log__c/fields/Error_Body__c.field-meta.xml
<CustomField>
    <fullName>Error_Body__c</fullName>
    <description>This field should contains body of error and information that will allow to locate source of error and fix the issue.</description>
    <inlineHelpText>This is Error body with any additional required information.</inlineHelpText>
    <label>Error Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>