force-app/main/default/objects/System_Log__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>This values should allow user to distinguish origin of the error. So if the error occurred in Apex or in Flow. It should also allow easier way of finding specific error record.</description>
    <inlineHelpText>This is the origin of error like Apex code execution, flow fail ect.</inlineHelpText>
    <label>Origin</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Not defined</fullName>
                <default>true</default>
                <label>Not defined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>