force-app/main/default/objects/System_Log__c/listViews/Fokus_Subscription_Job_Errors_for_May_10.listView-meta.xml
<ListView>
    <fullName>Fokus_Subscription_Job_Errors_for_May_10</fullName>
    <columns>NAME</columns>
    <columns>Origin__c</columns>
    <columns>Type__c</columns>
    <columns>Additional_Information__c</columns>
    <columns>Error_Body__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>5/10/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>Additional_Information__c</field>
        <operation>notEqual</operation>
        <value>FokusSubsDeltaTriggerHandler</value>
    </filters>
    <label>Fokus Subscription Job Errors for May 10</label>
</ListView>