force-app/main/default/objects/System_Log__c/listViews/Today_s_Error_Logs.listView-meta.xml
<ListView>
    <fullName>Today_s_Error_Logs</fullName>
    <columns>NAME</columns>
    <columns>Additional_Information__c</columns>
    <columns>Error_Body__c</columns>
    <filterScope>Mine</filterScope>
    <label>Today&apos;s Error Logs</label>
</ListView>